# feedendum

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  feedendum.rst  index.rst  user.rst
feedendum/: __init__.py  __version__.py  atom.py  exceptions.py  feed.py  rdf.py  rss.py  utils.py
tests/: lwn.rdf  martinfowler.atom  test_atom.py  test_feed.py  test_rdf.py  test_rss.py  utils.py  wikipedia-rss.xml
