[project]
name = "feedendum"
version = "0.3.0"
dependencies = [
    "lxml"
]
authors = [
  { name="Timendum", email="timendum@gmail.com" },
]
description = "A Utilities to read and write RSS and Atom feeds."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Topic :: Software Development :: Libraries',
    'Topic :: Text Processing :: Markup :: XML',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10'
]

[project.optional-dependencies]
http = ["requests"]

[project.urls]
"Homepage" = "https://github.com/timendum/feedendum"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["feedendum"] 

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "B", "G", "PIE", "TCH", "PLE", "PLW"]
ignore = ["N812"]  # To allow import lxml.etree as ET
line-length = 100
show-source = true