[project]
name = "feedendum"
version = "0.4.0"
dependencies = ["lxml"]
authors = [{ name = "Timendum", email = "timendum@gmail.com" }]
description = "A Utilities to read and write RSS and Atom feeds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  'License :: OSI Approved :: GNU Affero General Public License v3',
  'Topic :: Software Development :: Libraries',
  'Topic :: Text Processing :: Markup :: XML',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
]

[project.optional-dependencies]
http = ["requests"]

[project.urls]
"Homepage" = "https://github.com/timendum/feedendum"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.vscode"]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "G", "PIE", "TCH", "PLE", "PLW"]
lint.ignore = ["N812"]                                                              # To allow import lxml.etree as ET
line-length = 100
output-format = "full"

[tool.mypy]
disable_error_code = "import-untyped"
